@@ -335,3 +335,5 @@ Entity中toVo区别是否忽略大小写
 15、抽象JSON中的getEnum方法
 16、Conver类变为Convert类
 17、增加Holder接口
+18、抽象BeanUtil.copyProperties，支持更多选项
+19、DruidDS增加系统关闭的钩子
